# words-picker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  defined.h  freedict.pro  main.cpp  mainwindow.cpp  mainwindow.h  opendict.pro  org.flatpak.words-picker.json  package-deb.sh  resources.qrc  settings.h  src.qrc  systemtrayicon.cpp  words-picker.pro
DEBIAN/: control
SQL/: sqlite.cpp  sqlite.h
api/: CMakeLists.txt  youdaoapi.cpp  youdaoapi.h
deb/: .gitignore  freedict_v2017-1.0_amd64.deb  freedict_v2017-2.0_amd64.deb  freedict_v2017-3.0_amd64.deb  freedict_v2018-4.0_amd64.deb  freedict_v2018-5.0_amd64.deb  freedict_v2018-5.1_amd64_deepin.deb  freedict_v2018-5.1_amd64_ubuntu.deb  freedict_v2018-5.2_amd64_deepin.deb  opendict_v2017-1.0_amd64.deb  opendict_v2017-1_amd64.deb
deb/freedict/DEBIAN/: control  postinst
deb/freedict/opt/freedict/: freedict.conf  有道词典API返回示例.txt
deb/freedict/usr/share/applications/: freedict.desktop  words-picker.desktop
deb/ubuntu/: freedict
deb/words-picker/DEBIAN/: control
deb/words-picker/opt/words-picker/: conf
deb/words-picker/usr/share/applications/: words-picker.desktop
event/: CMakeLists.txt  eventmonitor.cpp  eventmonitor.h
logo/: freedict.ai
ms-win/dlltest/: dlltest.cpp
ms-win/test/: test.pro
resources/: info  light.qss
src/: CMakeLists.txt  defined.h  main.cpp  mainwindow.cpp  mainwindow.h  picker.cpp  picker.h  systemtrayicon.cpp  systemtrayicon.h
src/api/: result.cpp  result.h  youdaoapi.cpp  youdaoapi.h
src/event/: eventmonitor.cpp
src/ms-win/test/: mainwindow.h
src/windows/: about.cpp  float_browser.h  float_button.cpp  hyaline_window.cpp  hyaline_window.h  settings_window.cpp  word_table.h
windows/: CMakeLists.txt  about.cpp  about.h  float_browser.cpp  float_browser.h  float_button.cpp  float_button.h  hyaline_window.cpp  settings_window.cpp  settings_window.h  word_table.cpp  word_table.h
words-picker/: CMakeLists.txt  defined.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  words-picker.pro
words-picker/SQL/: CMakeLists.txt
words-picker/api/: result.cpp  result.h  youdaoapi.cpp  youdaoapi.h
words-picker/ms-win/dlltest/: dlltest.h  dlltest.pro  dlltest_global.h
words-picker/ms-win/test/: mainwindow.cpp  winhooks.cpp  winhooks.h
words-picker/resources/: info  light.qss
words-picker/windows/: about.cpp  about.h  float_browser.cpp  float_browser.h  float_button.cpp  float_button.h  hyaline_window.h  settings_window.cpp  word_table.cpp
